@@ -1,2 +1,44 @@
 # DTR_Generator
 Daily Time Record Generator using JavaFX and PostgreSQL
+
+
+![Time_In](https://i.imgur.com/DoTwutk.png)
+
+* Sign In your account
+
+![Sign_In](https://i.imgur.com/XC3NHsM.png)
+
+* Dashboard
+
+![Dashboard](https://i.imgur.com/oZUQ9in.png)
+
+* Time In the employee when admin is using his account
+
+![TimeIn on Admin's](https://i.imgur.com/mcbqjc5.jpg)
+
+* Employee's accounts
+
+![Employee Management](https://i.imgur.com/5WGcV9s.png)
+
+* Records
+
+![Employee Management](https://i.imgur.com/YNDApE2.png)
+
+* Sample generated DTR
+
+![DTR](https://i.imgur.com/Nf0VOZ6.jpg)
+![DTR](https://i.imgur.com/Ib3FoU0.jpg)
+![DTR](https://i.imgur.com/5m5MLHG.jpg)
+
+
+Install IntelliJ and PGAdmin for Database. Also download and install Java 11 or JDK 11. I used jfx13 and you can download it on https://openjfx.io/
+
+You need to configure first the IntelliJ and insert all of this jar libraries. Download all the libraries. 
+![Libraries](https://i.imgur.com/0CZ7zfv.png)
+
+And go to **edit configuration** > **VM Options** and copy this: --module-path YOUR_FILE_LOCATION_OF_OPENJFX_LIB --add-modules javafx.controls,javafx.fxml,javafx.base
+
+# Getting Started
+
+If you want to develop a system using JavaFX and PostgreSQL, this project might help you. 
+I used JDK 11 because it's LTS (long term support) and some codes are not working at JDK 13.
